ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: resource-catalogue
    meta.helm.sh/release-namespace: rm
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  creationTimestamp: "2023-01-10T17:00:11Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
    helm.toolkit.fluxcd.io/name: resource-catalogue
    helm.toolkit.fluxcd.io/namespace: rm
  name: resource-catalogue
  namespace: rm
  resourceVersion: "1104"
  uid: 7ff2d9ef-328c-497c-9e91-04c9dbc5969c
spec:
  rules:
  - host: resource-catalogue.192.168.49.2.nip.io
    http:
      paths:
      - backend:
          service:
            name: resource-catalogue-service
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - resource-catalogue.192.168.49.2.nip.io
    secretName: resource-catalogue-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
